syntax = "proto3";

message DataMessage {
    // User actions that are transmitted to the server.
    enum ClientRequest {
        ACTION_LOGIN = 0;
        ACTION_LOGOUT = 1;
        ACTION_CONNECT = 2;
        ACTION_DISCONNECT = 3;
        ACTION_SEARCH = 4;
        ACTION_MESSAGE = 5; // Indicates that a client wants to message another client
    }

    // Responses from the server, either a success or error.
    enum ResponseCode {
        RESPONSE_CODE_SUCCESS = 0;
        RESPONSE_CODE_ERROR = 1;
    }

    // Response from the server with an accompanying message.
    message ServerResponse {
        ResponseCode response = 1;
        string comment = 2; // server comment regarding what the response means.
    }

    // A message in chat
    message ChatMessage {
        string sender = 1;
        string receiver = 2;
        string body = 3;
        string key = 4;
        string date = 5;
    }

    ClientRequest action = 1; // User action. Server never sends actions.
    ServerResponse response = 2; // Response server sends in regard to action. Client never sends repsonses.
    repeated ChatMessage messages = 3; // UserMessages returned on search query
}
